<resources>
    <string name="app_name">UnitProject</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="login_screen">Login Screen</string>
    <string name="scan_screen">Scan Screen</string>
    <string name="nav_drawer_screen">Nav Drawer Screen</string>
    <string name="ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</string>
    <string name="hint_email">Email</string>
    <string name="camera">Camera</string>
    <string name="remove_icon">Remove icon</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="name">Enter your Name</string>
    <string name="number">Enter your Number</string>
    <string name="sign_in">Sign In</string>
    <string name="err_msg_name">Enter valid name</string>
    <string name="err_msg_num">Enter valid number</string>
    <string name="loggin_in">Loggin in...</string>
</resources>
