<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.application.unitproject.HomeActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scanScreen"
        android:text="@string/scan_screen"
        android:layout_above="@+id/loginScreen"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginScreen"
        android:text="@string/login_screen"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navScreen"
        android:text="@string/nav_drawer_screen"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginScreen"
        android:layout_margin="20dp"/>

</RelativeLayout>
