<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.application.unitproject.NavDrawActivity"
    tools:showIn="@layout/app_bar_nav_draw">

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        app:elevation="20dp"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/color_state"
        app:itemTextColor="@drawable/color_state"
        app:menu="@menu/bottom_navigation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explainText"
        android:layout_centerInParent="true"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:layout_margin="10dp"
            android:background="#E0E0E0"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/camera"
                        android:background="@null"
                        android:id="@+id/sheet_cam"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="10dp"
                        android:layout_centerInParent="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/sheet_cam"
                        android:text="@string/camera"
                        android:textColor="#000000"
                        android:layout_centerHorizontal="true"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sheet_rem"
                        android:src="@drawable/rubbish"
                        android:background="@null"
                        android:layout_alignParentRight="true"
                        android:padding="40dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_icon"
                        android:textColor="#000000"
                        android:layout_below="@+id/sheet_cam"
                        android:layout_alignParentRight="true"
                        android:paddingRight="20dp" />


                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sheet_gal"
                        android:src="@drawable/gallery"
                        android:background="@null"
                        android:padding="40dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery"
                        android:textColor="#000000"
                        android:layout_below="@+id/sheet_cam"
                        android:layout_marginLeft="40dp"/>

                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/cancel_sheet"
                    android:background="#E0E0E0"
                    android:text="@string/cancel"
                    android:textColor="#000000"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>








